# Qt_client

./: .gitignore  CMakeLists.txt  README.md  appmanager.cpp  appmanager.h  configmanager.cpp  configmanager.h  dbmanager.cpp  dbmanager.h  img.qrc  loginpage.cpp  loginpage.h  main.cpp  mainwindow.cpp  mainwindow.h  roi_frame.cpp  roi_frame.h  settingsdialog.cpp  settingsdialog.h  signuppage.cpp  signuppage.h  videopreviewthread.cpp  videopreviewthread.h  videothread.cpp  videothread.h
